--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                             <div class="tech__el">Automatisierung</div>
                             <div class="tech__el">Entwicklertools</div>
                             <div class="tech__el">Desktop-Anwendungen</div>
+                            <div class="tech__el">UI</div>
                             <div class="tech__el">Web-Anwendungen</div>
                         </div>
                     </div>
