--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
                                         <div class="tech__el">Express</div>
                                         <div class="tech__el">Node</div>
                                         <div class="tech__el">Vue</div>
+                                        <div class="tech__el">ajax</div>
                                         <div class="tech__el">jQuery</div>
+                                        <div class="tech__el">Angular</div>
+                                        <div class="tech__el">React</div>
                                     </td>
                                 </tr>
                                 <tr class="tech">
@@ -162,6 +165,7 @@
                                         <div class="tech__el">HTML</div>
                                         <div class="tech__el">CSS</div>
                                         <div class="tech__el">SASS</div>
+                                        <div class="tech__el">RestAPI</div>
                                     </td>
                                 </tr>
                             </table>
